--- a/vesttech/server/package.json
+++ b/vesttech/server/package.json
@@ -1,21 +1,21 @@
 {
-  "dependencies": {
-    "body-parser": "^1.20.0",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.17.3",
-    "express-validator": "^6.14.1",
-    "helmet": "^5.1.0",
-    "mongoose": "^6.3.8"
-  },
-  "name": "server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": ""
+	"dependencies": {
+		"body-parser": "^1.20.0",
+		"compression": "^1.7.4",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.1",
+		"express": "^4.17.3",
+		"express-validator": "^6.14.1",
+		"helmet": "^5.1.0",
+		"mongoose": "^6.3.8"
+	},
+	"name": "server",
+	"version": "1.0.0",
+	"main": "index.js",
+	"scripts": {
+		"start": "node src/app.js"
+	},
+	"author": "",
+	"license": "ISC",
+	"description": ""
 }
