--- a/vesttech/server/package.json
+++ b/vesttech/server/package.json
@@ -8,6 +8,7 @@
 		"express": "^4.17.3",
 		"express-validator": "^6.14.1",
 		"helmet": "^5.1.0",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.3.8"
 	},
 	"name": "server",
