--- a/vesttech/server/package.json
+++ b/vesttech/server/package.json
@@ -9,7 +9,8 @@
 		"express-validator": "^6.14.1",
 		"helmet": "^5.1.0",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^6.3.8"
+		"mongoose": "^6.3.8",
+		"swagger-ui-express": "^4.4.0"
 	},
 	"name": "server",
 	"version": "1.0.0",
